--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,12 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -29,4 +34,7 @@ dependencies {
 
     // mysql
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // jwt 의존성
+    implementation 'com.auth0:java-jwt:4.4.0'
 }
