--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,13 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
     show-sql: true
+
+
+security:
+  jwt:
+    secret: ${JWT_SECRET}
+    accessTokenExpired: ${ACCESS_TOKEN_EXPIRED}
+    refreshTokenExpired: ${REFRESH_TOKEN_EXPIRED}
+  kakao:
+    restApiKey: ${KAKAO_REST_API_KEY}
+    redirectUri: ${KAKAO_REDIRECT_URI}
