--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,8 @@ dependencies {
 
     // jwt 의존성
     implementation 'com.auth0:java-jwt:4.4.0'
+
+    // Redis 관련 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 }
