--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/assignment
-    username: hyodongg
-    password: ejvhqkel12!@
+    username: ${LOCAL_DB_USER}
+    password: ${LOCAL_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -13,6 +13,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
+        default_batch_fetch_size: 100
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
     show-sql: true
@@ -39,8 +40,6 @@ logging:
     org.springframework.cache: TRACE
     org.springframework.cache.interceptor.CacheInterceptor: TRACE
 
-
-
 security:
   jwt:
     secret: ${JWT_SECRET}
@@ -51,13 +50,8 @@ security:
     redirectUri: ${KAKAO_REDIRECT_URI}
 
 springdoc:
-  default-consumes-media-type: application/json
-  default-produces-media-type: application/json
-  api-docs:
-    path: /v3/api-docs # API 명세서 JSON 경로 설정
   swagger-ui:
-    path: /swagger-ui # Swagger UI 접속 경로 (localhost:8080/swagger-ui)
-    url: /v3/api-docs # ⭐️ 가장 중요! Swagger에게 읽어올 문서 위치를 강제로 지정
-    disable-swagger-default-url: true # 기본 Petstore URL 비활성화
-    operations-sorter: method # API 목록을 HTTP Method 순서로 정렬
-    display-request-duration: true # 요청 보냈을 때 걸린 시간 표시 (디버깅용)
+    url: /v3/api-docs
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
